--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -49,6 +49,10 @@
         width: 100%;
         
       }
+      &__button-container{
+        display: flex;
+        justify-content: space-between;
+      }
       &__movie-title {
         font-size: 10px;
         font-weight: bold;
