--- a/src/pages/Movies/PopMovieList.scss
+++ b/src/pages/Movies/PopMovieList.scss
@@ -62,4 +62,9 @@
     font-size: 16px;
     text-align: center;
   }
+
+  &__button-container {
+    display: flex;
+    justify-content: space-between;
+  }
 }
