--- a/src/pages/Movies/PopMovieList.scss
+++ b/src/pages/Movies/PopMovieList.scss
@@ -1,70 +1,69 @@
 .popular {
-  &__title {
-    font-family: "Aboreto", sans-serif;
-    font-size: 20px;
-    margin-left: 5px;
-    text-align: center;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media only screen and (max-width: 400px) {
+    &__title {
+      font-family: "Aboreto", sans-serif;
+      font-size: 20px;
+      margin-left: 5px;
+      text-align: center;
+    }
 
-  &__error-message {
-    color: red;
-  }
+    &__error-message {
+      color: red;
+    }
 
-  &__movie-list {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  &__item {
-    width: calc(33.33% - 20px);
-    margin: 10px;
-    border: 1px solid #ccc;
-    padding: 10px;
-    box-sizing: border-box;
-    text-align: center;
-  }
-  &__img {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-  }
+    &__movie-list {
+      margin-top: 50px;
+      width: 250px;
+      list-style: none;
+      padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
 
-  &__movie-title {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 10px 0;
-    font-family: "Kanit", sans-serif;
-    text-align: center;
-  }
+    &__movie-item {
+      margin-bottom: 10px;
+    }
 
-  &__overview {
-    font-size: 14px;
-    margin: 10px 0;
-    font-family: "Kanit", sans-serif;
-    text-align: justify;
-  }
+    &__img {
+      width: 100%;
+      max-width: 100%;
+      height: auto;
+    }
 
-  &__release-date {
-    font-size: 14px;
-    margin: 10px 0;
-    font-family: "Kanit", sans-serif;
-    text-align: center;
-  }
-  &__vote {
-    font-size: 14px;
-    margin: 10px 0;
-    font-family: "Kanit", sans-serif;
-    text-align: center;
-  }
-  &__loading-message {
-    font-size: 16px;
-    text-align: center;
-  }
+    &__movie-title {
+      font-size: 13px;
+      font-weight: bold;
+      margin: 10px 0;
+      font-family: "Kanit", sans-serif;
+      text-align: center;
+    }
 
-  &__button-container {
-    display: flex;
-    justify-content: space-between;
+    &__overview {
+      font-size: 14px;
+      margin: 10px 0;
+      font-family: "Kanit", sans-serif;
+      text-align: justify;
+    }
+
+    &__vote {
+      font-size: 14px;
+      margin: 10px 0;
+      font-family: "Kanit", sans-serif;
+      text-align: center;
+    }
+
+    &__loading-message {
+      font-size: 16px;
+      text-align: center;
+    }
+
+    &__button-container {
+      display: flex;
+      justify-content: center;
+    }
   }
 }
