--- a/src/pages/Watchlist/UpcomingWL.scss
+++ b/src/pages/Watchlist/UpcomingWL.scss
@@ -1,25 +1,23 @@
 .upcoming-wl {
   &__title {
     font-family: "Aboreto", sans-serif;
-    font-size: 20px;
-    margin-left: 5px;
-    text-align: center;
+    font-size: 10px;
+    text-align: start;
   }
 
   &__list {
     list-style: none;
     padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 20px;
   }
 
   &__item {
-    margin: 10px;
-    border: 1px solid #ccc;
-    padding: 10px;
     box-sizing: border-box;
     text-align: center;
+    position: relative;
+    margin-bottom: 20px;
   }
 
   &__item-title {
@@ -34,6 +32,12 @@
     width: 100%;
     max-width: 100%;
     height: auto;
+    transition: filter 0.3s ease;
+  }
+
+  &__button-box {
+    display: flex;
+    justify-content: space-between;
   }
 
   &__item-button {
@@ -44,10 +48,57 @@
     outline: none;
     font-size: 14px;
     font-family: "Kanit", sans-serif;
+
+    &--delete {
+      background-color: red;
+      color: white;
+    }
   }
 
-  &__item-button--delete {
-    background-color: red;
-    color: white;
+  @media only screen and (max-width: 400px) {
+    &__title {
+      font-family: "Aboreto", sans-serif;
+      font-size: 15px;
+      margin-left: 5px;
+     
+    }
+
+    &__list {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
+    &__item {
+      width: calc(50% - 10px);
+      box-sizing: border-box;
+      text-align: center;
+      position: relative;
+      margin-bottom: 20px;
+    }
+
+    &__item-image {
+      width: 100%;
+      max-width: 100%;
+      height: auto;
+    }
+
+    &__button-box {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__item-button {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+
+      &--delete {
+        background-color: red;
+        color: white;
+      }
+    }
   }
 }
