--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,14 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Aboreto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap");
+
 .header {
   display: flex;
-  justify-content: space-evenly;
   flex-direction: row;
-  &__title {
-    font-family: "Aboreto", sans-serif;
-    font-size: 35px;
-    margin-left: 20px;
-  }
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  z-index: 3;
 
   &__item {
     margin-left: 5px;
@@ -17,17 +16,32 @@
   &__logo-container {
     display: flex;
     justify-content: center;
+    z-index: 3;
+    margin-left: 150px;
   }
+
   &__logo {
-    width: 25px;
-    height: 25px;
-    padding: 10px;
+    width: 40px;
+    height: 40px;
+    margin: 10px 0;
+
+    &--watch {
+      width: 30px;
+      height: 30px;
+      padding: 0px 10px;
+    }
   }
+
   &__title {
     font-family: "Aboreto", sans-serif;
     font-size: 20px;
+    font-weight: bold;
     margin-left: 5px;
+    z-index: 3;
+    color: white;
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.1);
   }
+
   &__menu {
     display: flex;
     justify-content: center;
@@ -35,29 +49,35 @@
     list-style: none;
     padding-left: 0;
     margin: 0;
+    z-index: 3;
   }
 
   &__link {
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.1);
+    color: white;
     display: flex;
     align-items: center;
-    padding: 0px 10px 0px 10px;
-    font-size: 14px;
+    padding: 0px 20px 0px 20px;
+    font-size: 25px;
+    font-weight: bold;
     text-decoration: none;
     font-family: "Kanit", sans-serif;
-
+    &--logo {
+      padding: 0px;
+    }
     &:visited {
-      color: black;
+      color: white;
     }
+  }
 
-    &--watchlist-container {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
-    &__item {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
+  &__watchlist-container {
+    margin-right: 150px;
+    z-index: 3;
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   }
 }
