--- a/src/components/Slider/SliderGenre.scss
+++ b/src/components/Slider/SliderGenre.scss
@@ -1,37 +1,102 @@
 .genre {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: transparent;
+
   &__list {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    list-style: none;
     padding: 0;
-    list-style-type: none;
+    margin: 0;
+    text-align: center;
   }
 
   &__item {
-    font-size: 15px;
-    display: flex;
-    align-items: center;
+    position: relative;
+    font-size: 12px;
+    margin-bottom: 10px;
+    color: white;
     cursor: pointer;
+    transition: background-color 0.3s;
+    width: 120px;
+
+    &:hover {
+      font-size: 1rem;
+    }
 
     &.selected {
+      color: #fff;
+      font-size: 1em;
+      text-shadow: 2px 2px 2px rgb(0, 0, 0, 0.3);
       .selected-text {
-        font-size: 18px;
-        color: red;
+        font-weight: bold;
+        text-shadow: 2px 2px 2px rgb(0, 0, 0, 0.3);
       }
+    }
 
-      .genre__arrow {
-        display: block;
+    &.no-filter {
+      font-size: 15px;
+      font-weight: bold;
+      color: #d85b53;
+      text-shadow: 1px 1px 1px rgb(0, 0, 0, 0.3);
+      margin-bottom: 10px;
+
+      &:hover {
+        font-size: 1.5rem;
+      }
+      &.selected {
+        color: #d85b53;
+        font-size: 1.5em;
+
+        .selected-text {
+          font-weight: bold;
+        }
       }
     }
   }
 
   &__arrow {
-    width: 15px;
-    display: none;
-    margin-left: 5px;
+    width: 40px;
+    cursor: pointer;
+  
+    &--up {
+      margin-bottom: 15px;
+  
+      &:hover {
+        animation: bounceUp 3s ease;
+      }
+    }
+  
+    &--down {
+      margin-top: 15px;
+  
+      &:hover {
+        animation: bounceDown 3s ease;
+      }
+    }
   }
-
-  .selected-text {
-    transition: font-size 0.3s, color 0.3s;
+  
+  @keyframes bounceUp {
+    0% {
+      transform: translateY(0);
+    }
+    20% {
+      transform: translateY(-20px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+  
+  @keyframes bounceDown {
+    0% {
+      transform: translateY(0);
+    }
+    20% {
+      transform: translateY(20px);
+    }
+    100% {
+      transform: translateY(0);
+    }
   }
 }
