--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,8 +6,9 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+
   z-index: 3;
+  height: 10vh;
 
   &__item {
     margin-left: 5px;
@@ -38,8 +39,8 @@
     font-weight: bold;
     margin-left: 5px;
     z-index: 3;
-    color: white;
-      text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2); 
+   
+
   }
 
   &__menu {
@@ -50,24 +51,23 @@
     padding-left: 0;
     margin: 0;
     z-index: 3;
-    
   }
 
   &__link {
-      text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2); 
-    color: white;
+
+
     display: flex;
     align-items: center;
     padding: 0px 20px 0px 20px;
     font-size: 25px;
-    font-weight: bold;
+  
     text-decoration: none;
     font-family: "Kanit", sans-serif;
     &--logo {
       padding: 0px;
     }
     &:visited {
-      color: white;
+      color: black;
     }
   }
 
@@ -80,5 +80,81 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+  }
+  @media only screen and (max-width: 320px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0px;
+    z-index: 3;
+
+    &__item {
+      margin-left: 5px;
+    }
+
+    &__logo-container {
+      display: flex;
+      justify-content: center;
+      z-index: 3;
+      margin-left: 20px;
+    }
+
+    &__logo {
+      width: 20px;
+      height: 20px;
+      margin: 10px 0;
+
+      &--watch {
+        width: 15px;
+        height: 15px;
+        padding: 0px 10px;
+      }
+    }
+
+    &__title {
+      font-family: "Aboreto", sans-serif;
+      font-size: 5px;
+      font-weight: bold;
+      margin-left: 5px;
+      z-index: 3;
+
+    }
+
+    &__menu {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      list-style: none;
+      padding-left: 0;
+      margin: 0;
+      z-index: 3;
+    }
+
+    &__link {
+
+      display: flex;
+      align-items: center;
+      padding: 0px 10px 0px 10px;
+      font-size: 5px;
+      font-weight: bold;
+      text-decoration: none;
+      font-family: "Kanit", sans-serif;
+      &--logo {
+        padding: 0px;
+      }
+   
+    }
+
+    &__watchlist-container {
+      margin-right: 20px;
+      z-index: 3;
+    }
+
+    &__item {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
   }
 }
