--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -11,10 +11,28 @@
     list-style-type: none;
 
     & > * {
-      margin-right: 32px;
+      margin-right: 20px;
     }
     & > *:last-child {
       margin-right: 0;
+    }
+  }
+  @media only screen and (max-width: 320px) {
+
+
+    &__list {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      list-style-type: none;
+
+      & > * {
+        margin-right: 12px;
+      }
+      & > *:last-child {
+        margin-right: 0;
+      }
     }
   }
 }
