--- a/src/components/Slider/SliderGenre.scss
+++ b/src/components/Slider/SliderGenre.scss
@@ -3,49 +3,71 @@
   flex-direction: column;
   align-items: center;
   background-color: transparent;
+  font-family: "Rubik", sans-serif;
+  background: linear-gradient(to right,
+      rgb(0, 0, 0, 0.1) 100%,
+      transparent 100%);
+  padding: 5px;
+  border-radius: 15px;
 
   &__list {
     list-style: none;
     padding: 0;
     margin: 0;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+
+
   }
 
   &__item {
     position: relative;
     font-size: 12px;
-    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 5px;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
     width: 120px;
 
-    &:hover {
-      font-size: 1rem;
+
+    &.all-selected {
+      color: white;
+      font-size: 1.5em;
+      font-weight: bold;
+      text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+
     }
 
     &.selected {
-      color: #fff;
-      font-size: 1em;
-      text-shadow: 2px 2px 2px rgb(0, 0, 0, 0.3);
-      .selected-text {
+
+      span {
+
+        color: white;
+        font-size: 1.5em;
         font-weight: bold;
-        text-shadow: 2px 2px 2px rgb(0, 0, 0, 0.3);
+        text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+
+        &.selected-text {
+          font-weight: bold;
+        }
       }
     }
 
     &.no-filter {
       font-size: 15px;
       font-weight: bold;
-      color: #d85b53;
-      text-shadow: 1px 1px 1px rgb(0, 0, 0, 0.3);
-      margin-bottom: 10px;
+      color: #fff;
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+      margin-bottom: 5px;
 
-      &:hover {
-        font-size: 1.5rem;
-      }
+      text-decoration: underline rgba(216, 93, 85, 0.5);
+
+
+
       &.selected {
-        color: #d85b53;
+        color: white;
         font-size: 1.5em;
 
         .selected-text {
@@ -53,50 +75,80 @@
         }
       }
     }
+
+
   }
 
   &__arrow {
     width: 40px;
     cursor: pointer;
-  
-    &--up {
-      margin-bottom: 15px;
-  
-      &:hover {
-        animation: bounceUp 3s ease;
-      }
-    }
-  
+
+    &--up,
     &--down {
-      margin-top: 15px;
-  
-      &:hover {
-        animation: bounceDown 3s ease;
+      margin: 0 10px;
+    }
+  }
+
+  @media only screen and (max-width: 320px) {
+    flex-direction: row;
+
+
+    &__arrow {
+      width: 25px;
+
+
+      &--up,
+      &--down {
+        margin: 0 10px;
       }
     }
-  }
-  
-  @keyframes bounceUp {
-    0% {
-      transform: translateY(0);
-    }
-    20% {
-      transform: translateY(-20px);
-    }
-    100% {
-      transform: translateY(0);
-    }
-  }
-  
-  @keyframes bounceDown {
-    0% {
-      transform: translateY(0);
-    }
-    20% {
-      transform: translateY(20px);
-    }
-    100% {
-      transform: translateY(0);
+
+    &__item {
+      font-size: 12px;
+      margin: 0;
+      margin-bottom: 0px;
+      width: 70px;
+
+      &:hover {
+        font-size: 15px;
+      }
+
+      &.selected {
+        span {
+          color: white;
+          font-size: 10px;
+          text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+
+          &.selected-text {
+            font-weight: bold;
+          }
+        }
+      }
+
+      &.no-filter {
+        font-size: 10px;
+        font-weight: bold;
+        color: #fff;
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+        margin-bottom: 5px;
+
+        text-decoration: underline rgba(216, 93, 85, 0.5);
+
+        &:hover {
+          color: white;
+        }
+
+        &.selected {
+          color: white;
+          font-size: 15px;
+
+          .selected-text {
+            font-weight: bold;
+            font-size: 15px;
+            font-weight: bold;
+          }
+        }
+      }
     }
   }
 }
