--- a/src/components/UI/Button.scss
+++ b/src/components/UI/Button.scss
@@ -25,7 +25,7 @@
 
   &:hover,
   &:focus {
-    background-color: #3498db;
+
     color: #fff;
   }
 
@@ -85,22 +85,24 @@
 
   &--view {
     background-color: #d85b53;
-    width: 150px;
+    width: 170px;
     height: 50px;
-    font-size: 13px;
-    background: linear-gradient(45deg, transparent 5%, rgba(216, 91, 83) 5%);
+    font-size: 15px;
+    background: linear-gradient(45deg, rgba(216, 91, 83) 5%);
     border: 0;
     color: #fff;
-    box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.3);
+
     margin-right: 40px;
 
     &:focus {
       width: 175px;
+      background-color: rgb(51, 152, 219, 0.5)
     }
 
     &:hover {
       color: white;
-      width: 160px;
+
+      box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.2);
     }
 
     &:active {
@@ -111,5 +113,65 @@
   &__icon {
     width: 30px;
     margin-right: 10px;
+  }
+  @media only screen and (max-width: 320px) {
+    align-items: center;
+    border: none;
+    box-sizing: border-box;
+    color: #000;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: Inter, sans-serif;
+    font-size: 12px;
+    font-weight: 600;
+    height: 48px;
+    justify-content: center;
+    letter-spacing: -0.8px;
+    line-height: 24px;
+    min-width: 20px;
+    outline: 0;
+    padding: 0 10px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.3s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    border-radius: 15px;
+  
+
+  
+   
+    &--view {
+      background-color: #d85b53;
+      width: 110px;
+      height: 30px;
+      font-size: 10px;
+      background: linear-gradient(45deg, rgba(216, 91, 83) 5%);
+      border: 0;
+      color: #fff;
+  
+      margin-right: 20px;
+  
+      &:focus {
+        width: 115px;
+        background-color: rgb(51, 152, 219, 0.5)
+      }
+  
+      &:hover {
+        color: white;
+  
+        box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.2);
+      }
+  
+      &:active {
+        color: black;
+        fill: black;
+      }
+    }
+    &__icon {
+      width: 15px;
+      margin-right: 10px;
+    }
   }
 }
