--- a/src/pages/UpcomingMovie/UpcomingMovie.scss
+++ b/src/pages/UpcomingMovie/UpcomingMovie.scss
@@ -3,8 +3,9 @@
 .upcoming {
   position: relative;
   font-family: "Rubik", sans-serif;
-  height: 100vh;
+  height: 90vh;
   overflow: hidden;
+  border-radius: 15px 15px 0 0;
 
   &__details-container {
     position: absolute;
@@ -15,6 +16,12 @@
     padding: 20px;
     border-radius: 15px;
     z-index: 2;
+
+
+    background: linear-gradient(to right,
+        rgb(0, 0, 0, 0.1) 40%,
+        rgb(0, 0, 0, 0.05) 60%,
+        transparent 100%);
   }
 
   &__details {
@@ -26,6 +33,7 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+    text-shadow: 1px 1px 2px rgb(0, 0, 0, 0.2);
   }
 
   &__vote-details {
@@ -40,24 +48,17 @@
     right: 0;
     z-index: 2;
     margin-right: 150px;
+    margin-top: 0;
   }
 
   &__button-container {
     margin-top: 20px;
   }
 
-  &__linear {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background: linear-gradient(
-      to right,
-      rgb(0, 0, 0, 0.5) 40%,
-      rgb(0, 0, 0, 0.05) 60%,
-      transparent 100%
-    );
+  &__header {
+    z-index: 5;
   }
+
 
   &__background {
     position: absolute;
@@ -80,6 +81,15 @@
     font-size: 17px;
   }
 
+  &__genres {
+    display: flex;
+    align-items: center;
+  }
+
+  &__genre-item {
+    margin-right: 5px;
+  }
+
   &__error-message {
     color: #d85b53;
     text-align: center;
@@ -99,6 +109,7 @@
     animation: bounce2 5s ease infinite;
 
     @keyframes bounce2 {
+
       0%,
       20%,
       50%,
@@ -106,9 +117,11 @@
       100% {
         transform: translateY(0);
       }
+
       40% {
         transform: translateY(-30px);
       }
+
       60% {
         transform: translateY(-15px);
       }
@@ -130,8 +143,10 @@
 
   &__vote {
     flex: 1;
+    display: flex;
+    align-items: center;
     text-align: start;
-    padding: 5px;
+    padding: 10px 0px;
   }
 
   &__count {
@@ -157,12 +172,16 @@
     width: 30px;
     height: 30px;
     margin-right: 15px;
-    &:hover {
-      background-color: #d85b53;
-      padding: 5px;
-      border-radius: 10px;
+    cursor: pointer;
+
+    &--detail {
+      animation: none !important;
+      width: 20px;
+      height: auto;
+      margin-right: 5px;
     }
   }
+
   &__title-overlay {
     width: 100%;
     position: absolute;
@@ -180,8 +199,163 @@
 
   &__filter {
     position: absolute;
-    top: 50%;
+    top: 40%;
     z-index: 3;
     margin-left: 150px;
+  }
+
+  @media only screen and (max-width: 320px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__details-container {
+      max-width: 400px;
+      bottom: 36%;
+      margin: 10px;
+      padding: 10px;
+    }
+
+    &__details {
+      text-shadow: 1px 1px 2px rgb(0, 0, 0, 0.3);
+      margin: 0 auto;
+      padding: 10px;
+    }
+
+    &__vote-details {
+      justify-content: space-between;
+      margin-top: 10px;
+    }
+
+    &__slider-container {
+      bottom: 12%;
+      margin-right: 10px;
+    }
+
+    &__button-container {
+      margin-top: 10px;
+    }
+
+    &__background {
+      filter: blur(5px);
+      backdrop-filter: blur(5px);
+    }
+
+    &__title {
+      font-size: 12px;
+    }
+
+    &__overview {
+      width: 270px;
+      font-size: 10px;
+    }
+
+    &__genres {
+      display: flex;
+      align-items: center;
+    }
+
+    &__genre-item {
+      font-size: 10px;
+    }
+
+    &__img {
+      width: 50px;
+    }
+
+    &__selected {
+      box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+        rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+        rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+      width: 60px;
+      animation: bounce2 6s ease infinite;
+
+      @keyframes bounce2 {
+
+        0%,
+        20%,
+        50%,
+        80%,
+        100% {
+          transform: translateY(0);
+        }
+
+        40% {
+          transform: translateY(-20px);
+        }
+
+        60% {
+          transform: translateY(-15px);
+        }
+      }
+    }
+
+
+
+    &__vote-details {
+      justify-content: space-evenly;
+      width: auto;
+      font-size: 10px;
+    }
+
+    &__vote {
+      padding: 5px 0px;
+      width: 70px;
+    }
+
+
+    &__icon-container {
+      margin-left: 0px;
+      width: auto;
+      display: flex;
+      align-items: center;
+      bottom: 3%;
+    }
+
+    &__icon {
+      width: 25px;
+      height: 25px;
+      margin-right: 0;
+      padding: 0 5px;
+
+      &--detail {
+        width: 12px;
+        height: 12px;
+      }
+    }
+
+    &__title-overlay {
+      display: none;
+    }
+
+
+
+    &__filter {
+      width: 100%;
+      top: 3%;
+      display: flex;
+      justify-content: center;
+      margin-left: 0;
+    }
+  }
+
+  @media only screen and (max-width: 450px) {
+    /* Styles for small screens (tablets) */
+  }
+
+  @media only screen and (max-width: 800px) {
+    /* Styles for small screens (tablets) */
+  }
+
+  @media only screen and (max-width: 1000px) {
+    /* Styles for large screens (tablets) */
+  }
+
+  @media only screen and (max-width: 1200px) {
+    /* Styles for large screens (large desktops) */
+  }
+
+  @media only screen and (max-width: 1500px) {
+    /* Styles for large screens (large desktops) */
   }
 }
