--- a/src/components/Slider/SliderGenre.scss
+++ b/src/components/Slider/SliderGenre.scss
@@ -5,7 +5,7 @@
   background-color: transparent;
   font-family: "Rubik", sans-serif;
   background: linear-gradient(to right,
-      rgb(0, 0, 0, 0.1) 100%,
+      rgb(0, 0, 0, 0.3) 100%,
       transparent 100%);
   padding: 5px;
   border-radius: 15px;
@@ -55,32 +55,12 @@
       }
     }
 
-    &.no-filter {
-      font-size: 15px;
-      font-weight: bold;
-      color: #fff;
-      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-      margin-bottom: 5px;
-
-      text-decoration: underline rgba(216, 93, 85, 0.5);
-
-
-
-      &.selected {
-        color: white;
-        font-size: 1.5em;
-
-        .selected-text {
-          font-weight: bold;
-        }
-      }
-    }
 
 
   }
 
   &__arrow {
-    width: 40px;
+    width: 30px;
     cursor: pointer;
 
     &--up,
@@ -89,66 +69,144 @@
     }
   }
 
-  @media only screen and (max-width: 320px) {
+  @media only screen and (width: 1024px) and (height: 1366px),
+  only screen and (width: 912px) and (height: 1366px) {
+    display: flex;
     flex-direction: row;
-
-
-    &__arrow {
-      width: 25px;
-
-
-      &--up,
-      &--down {
-        margin: 0 10px;
-      }
-    }
+    align-items: center;
 
     &__item {
-      font-size: 12px;
-      margin: 0;
+      font-size: 20px;
+      margin-top: 0px;
       margin-bottom: 0px;
-      width: 70px;
+      width: 140px;
 
-      &:hover {
-        font-size: 15px;
+
+      &.all-selected {
+        font-size: 1.1em;
       }
 
       &.selected {
         span {
-          color: white;
-          font-size: 10px;
-          text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
-
-          &.selected-text {
-            font-weight: bold;
-          }
-        }
-      }
-
-      &.no-filter {
-        font-size: 10px;
-        font-weight: bold;
-        color: #fff;
-        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-        margin-bottom: 5px;
-
-        text-decoration: underline rgba(216, 93, 85, 0.5);
-
-        &:hover {
-          color: white;
-        }
-
-        &.selected {
-          color: white;
-          font-size: 15px;
-
-          .selected-text {
-            font-weight: bold;
-            font-size: 15px;
-            font-weight: bold;
-          }
+          font-size: 1.1em;
         }
       }
     }
+
+    &__arrow {
+      width: 35px;
+      cursor: pointer;
+
+      &--up,
+      &--down {
+        margin: 0 5px;
+      }
+    }
   }
+
+  @media only screen and (min-width: 712px) and (max-width: 1020px) {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    &__item {
+      font-size: 20px;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      width: 140px;
+
+
+      &.all-selected {
+        font-size: 1.1em;
+      }
+
+      &.selected {
+        span {
+          font-size: 1.1em;
+        }
+      }
+    }
+
+    &__arrow {
+      width: 35px;
+      cursor: pointer;
+
+      &--up,
+      &--down {
+        margin: 0 5px;
+      }
+    }
+  }
+
+  @media only screen and (min-width: 481px) and (max-width: 712px) {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    &__item {
+
+      font-size: 15px;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      width: 100px;
+
+
+      &.all-selected {
+        font-size: 1em;
+      }
+
+      &.selected {
+        span {
+          font-size: 1em;
+        }
+      }
+    }
+
+    &__arrow {
+      width: 25px;
+      cursor: pointer;
+
+      &--up,
+      &--down {
+        margin: 0 5px;
+      }
+    }
+  }
+
+  @media only screen and (min-width: 280px) and (max-width: 480px) {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    &__item {
+
+      font-size: 15px;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      width: 100px;
+
+
+      &.all-selected {
+        font-size: 1em;
+      }
+
+      &.selected {
+        span {
+          font-size: 1em;
+        }
+      }
+    }
+
+    &__arrow {
+      width: 25px;
+      cursor: pointer;
+
+      &--up,
+      &--down {
+        margin: 0 5px;
+      }
+    }
+  }
+
+
 }
