--- a/src/components/UI/VideoModal.scss
+++ b/src/components/UI/VideoModal.scss
@@ -27,14 +27,59 @@
     &:hover {
       width: 30px;
     }
+
+
   }
-  @media only screen and (max-width: 320px) {
-    top: 44%;
+
+  @media only screen and (min-width: 1025px) and (max-width: 1424px) {
+    top: 50%;
     left: 50%;
   }
+
+  @media only screen and (min-width: 713px) and (max-width: 1020px) {
+    top: 50%;
+    left: 50%;
+
+
+
+    &__cross {
+      width: 25px;
+      height: auto;
+      padding: 5px;
+
+    }
+  }
+
+  @media only screen and (min-width: 481px) and (max-width: 712px) {
+    top: 50%;
+    left: 50%;
+
+
+
+    &__cross {
+      width: 25px;
+      height: auto;
+      padding: 5px;
+
+    }
+  }
+
+  @media only screen and (min-width: 280px) and (max-width: 480px) {
+    top: 50%;
+    left: 50%;
+
+    &__cross-container {
+      padding: 5px;
+    }
+
+    &__cross {
+      width: 20px;
+      height: auto;
+      padding: 0px;
+
+    }
+  }
 }
-
-
 
 iframe {
   padding: 10px;
@@ -43,8 +88,23 @@ iframe {
   border: none;
   border-radius: 10px;
 
-  @media only screen and (max-width: 320px) {
-    width: 280px;
-    height: 280px;
+  @media only screen and (min-width: 1025px) and (max-width: 1424px) {
+    width: 620px;
+    height: 420px;
+  }
+
+
+  @media only screen and (min-width: 481px) and (max-width: 712px) {
+    padding: 10px;
+    width: 420px;
+    height: 320px;
+
+  }
+
+  @media only screen and (min-width: 280px) and (max-width: 480px) {
+    padding: 10px;
+    width: 250px;
+    height: 200px;
+
   }
 }
